# my-maria-server

client/: mysql_upgrade.c
extra/: CMakeLists.txt
extra/mariadbfrm/: CMakeLists.txt  frm_mocks.cc  frm_parser.cc  frm_parser.h  mariadb_frm.cc
mysql-test/: mariadb-test-run.pl
mysql-test/main/: func_json.result  mysql_upgrade.result  mysql_upgrade.test  opt_hints_qb_name_path.result
mysql-test/suite/client/: mariadb-frm-simple.result  mariadb-frm-simple.test
sql/: item.h  sql_select.cc  table.cc
sql/share/: errmsg-utf8.txt
